# spoiler-guard

./: .gitignore  CLAUDE.md  README.md  config.toml  config.toml.example  pyproject.toml
browser-extension/chrome/: content.js  manifest.json  overlay.css
browser-extension/firefox/: content.js  manifest.json  overlay.css
src/sonyliv_util/: api.py  cli.py  config.py
src/spoiler_guard/: api.py  cli.py  common.py  config.py  hotstar_api.py  hotstar_cli.py  hotstar_match.py  ipl_cli.py  ipl_match.py  sonyliv_cli.py  sonyliv_match.py
tests/: test_api.py  test_cli.py  test_common.py  test_config.py  test_hotstar_api.py  test_hotstar_cli.py  test_hotstar_match.py  test_ipl_cli.py  test_ipl_match.py  test_match.py  test_sonyliv_api.py  test_sonyliv_cli.py  test_sonyliv_match.py
