[project]
name = "sonyliv-util"
version = "0.1.0"
description = "Spoiler-free Champions League highlights launcher for SonyLiv"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sonyliv = "sonyliv_util.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sonyliv_util"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
