[project]
name = "spoiler-guard"
version = "0.1.0"
description = "Spoiler-free Champions League highlights launcher for SonyLiv"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sonyliv = "spoiler_guard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spoiler_guard"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
