[project]
name = "spoiler-guard"
version = "0.1.0"
description = "Spoiler-free sports highlights launcher for SonyLiv and Hotstar"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ucl = "spoiler_guard.sonyliv_cli:main"
pl = "spoiler_guard.hotstar_cli:main"
ipl = "spoiler_guard.ipl_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spoiler_guard"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
